<resources>
    <string name="app_name">Dota2</string>
    <string name="opisanie">На полях Вечной бойни, далеко на юге от Квойджа, тучная фигура упорно трудится под покровом ночи — убирает, а затем расчленяет, потрошит, сгружает в кучи конечности и внутренние органы павших. И все это лишь для того, чтобы на следующее утро бойня могла повториться. В том проклятом мире ничто не разлагается само по себе — мертвецам никогда не суждено вернуться обратно в землю, и не важно, насколько глубока могила. Окруженный стаями птиц-падальщиков, которым нужны порезанные кусочки трупов, мясник Pudge упражняется с лезвиями, которые затачиваются от резки трупов. Вжик-вжик-тух. Плоть отсекается от костей, связки и сухожилия отрываются как кусочки мокрой бумаги. И хоть у Pudge всегда было пристрастие к мясницкому ремеслу, со временем тучный здоровяк полюбил и то, что получается, когда он заканчивает работу над трупом. Сначала кусочек мускула там, глоточек крови... Вскоре Pudge уже вгрызался в тела самых крепких существ подобно грызущей кость собаке. Даже те, кто не питает страха перед жнецом Смерти, предпочитают не связываться с мясником.</string>
    <string name="opisanie1">Никто никогда не видел лица, что скрыто за маской Юрнеро. Остаётся гадать, каков он на вид. Однажды Юрнеро бросил вызов нечистому на руку лорду и был изгнан с древнего острова Масок. Кара спасла ему жизнь: скорой ночью остров исчез под волнами, ведомыми мстительной магией. Лишь Юрнеро отныне хранит обычаи острова: древние ритуалы и искусство боя на мечах. Непоколебимость и мужество пришли к нему в нескончаемых упражнениях с клинком, а изобретательность в бою он укоренял, неутомимо испытывая себя. Как и лик воина, желания его остаются тайной. Он уже дважды терял всё, но сражается так, будто победа предрешена.</string>
    <string name="opisanie2">Ригварл никогда не поворачивался спиной в бою и славился битвами с самыми крепкими и гадкими задирами, до которых только доходили руки. Любимец пьяных толп стал участвовать в подпольных боях, что проводились в каждой придорожной таверне между Сломом и Эльзе, и однажды умелого бойца заприметил один трактирщик, искавший вышибалу в бар. За скромную выпивку Ригварл стал собирать с посетителей плату, следить за порядком и время от времени ломать пару конечностей особо несговорчивым клиентам (а одному членистоногому бедняге однажды сломал целых пять). Но одной праздной ночью хмельной удар разделили Ригварл и его собственная печёнка: он нашёл равного себе бойца. «Не нравятся мне ваши бивни, уважаемый», — пробормотал он заплетающимся языком кряжистому детине с севера, которому пора было заплатить. И началось побоище века! В драку бросилась дюжина посетителей. Не уцелел ни один стул. А закончилось всё невероятно: клиент ушёл, не заплатив за выпивку. За несколько недель раны вышибалы затянулись, а иглы отросли, но удар по чести он простить не мог. Счёт Ригварл оплатил из своего кармана, поклявшись выследить северянина и взыскать с него полную плату. После этого он занялся тренировками, чего никогда раньше не делал, и неожиданно для себя сделал поразительное открытие. С улыбкой расправив иглы, он решил: иногда всё же стоит показывать обидчику спину.</string>
    <string name="opisanie3">Внебрачный сын вигильского рыцаря, урожденный бледный меранс, взращенный в руинах Тенистого взморья. Его отца казнили за нарушение Вигильского кодекса, а мать отвергло ее дикое племя, поэтому Sven считает, что честь следует искать не в обществе, но в себе. Когда из жизни ушла мать, о которой Sven заботился до самой ее смерти, он отправился на службу вигильским рыцарям, не раскрывая своей личности. На протяжении тринадцати лет он учился в школе своего отца, постигая суровый закон, который объявлял само его существование мерзостью. И вот, в день, когда Sven должен был принести присягу, он завладел Клинком изгоя, разбил Священный шлем и сжег кодекс в священном вигильском пламени. Он покинул вигильскую цитадель, навсегда одинокий, строго следующий своим личным законам до последней руны. Да, он рыцарь… но рыцарь мятежный.</string>
    <string name="opisanie4">Зверь мог бы провести в заключении оставшуюся вечность, если бы не непредсказуемые силы Механизма Континуума. Теперь же, освободившись от пут Глейпнира и покинув Хранилище, Зверь оказался далеко от туманной рощи и гораздо ближе к населённым землям. Он снова идёт тропой убийств и разрушений — и ничтожные зачатки цивилизации едва ли удержат векового монстра в узде.</string>
    <string name="opisanie5">Баратрум — гордое и могущественное существо, яростный первичный разум. В мир материи он пришёл, чтоб участвовать в событиях, отзвуки которых донесутся до его родной первичной вселенной. Сам собрал своё тело Баратрум, и послужит оно ему как в нашем мире, так и за его пределами. Его бренная оболочка черпает силы из нашей вселенной, объединяет она формы быка и обезьяны: рога, копыта и лапы воплощают его силу, скорость и ловкость. Кольцо в носу напоминает Баратруму, что служит он тайному господину и что мир, где трудится он, — лишь тень настоящего бытия.</string>
    <string name="opisanie6">Марс, первый сын небес, всю свою долгую жизнь провёл в нескончаемой войне и видел, как под стягами его древнего имени ведутся бесчисленные боевые кампании. Войны ради завоеваний и ради мести. Справедливые и беспричинные... Всегда жестокие. Подобно своему отцу, Марс подчинялся низменным инстинктам — с куда более варварскими намерениями, чем у Зевса, — и приносил другим неописуемые страдания.</string>
    <string name="opisanie7">Очнувшись от агонии священного мира Нотл, воин открыл глаза и узрел, как одарённый жрец теней накладывает на него глубокое заклятие. Вопреки древним обрядам ордена Дезун душа воина была спасена от вечности, но, как и все побывавшие в мире Нотл, он необратимо изменился. Более неподвластная смертной плоти, его кровь обратилась источником невообразимой силы; каждая пролитая капля с лихвой возвращалась лютой, горящей мощью. </string>
    <string name="osebe">Гений, миллиардер, плейбой, филантроп. Этот мир далёк от совершенства, но нам в нём жить. Если однажды оружие не понадобится для борьбы за мир, я клянусь, буду лепить кирпичи для больниц.</string>
    <string name="oprogramm">Данная программа прпедставляет собой справочник по игре "Dota 2", в программе вы сможете узнать или вспомнить всё о героях данной игры. </string>
    <string name="dota">Dota 2 — компьютерная многопользовательская командная игра жанра стратегия в реальном времени с элементами компьютерной ролевой игры, реализация известной карты DotA для игры Warcraft III в отдельном клиенте.
    В игре участвуют две команды по пять человек. Одна команда играет за светлую сторону, другая — за темную. Каждый игрок управляет одним героем, каждый из которых обладает особыми навыками и умениями. Герой может получать опыт для повышения своего уровня, зарабатывать золото, покупать и собирать предметы, которые усиливают его или дают дополнительные способности. Каждый игрок постоянно получает небольшое количество золота от своей базы, а также зарабатывает небольшие порции золота за убийство вражеских существ и большие — за убийство героев. Команды рассредотачиваются по линиям, на которых происходит борьба с вражескими героями и отрядами крипов под управлением компьютера, которые каждые полминуты появляются на базах команд. Цель игры — уничтожить главное здание на вражеской базе.</string>
    <string name="opisanie1.1">Повелитель небес и отец богов видит во всех героях своих буйных, мятежных детей. Неисчислимы свидания со смертными женщинами, где заставала его супруга. Поставила богиня бессмертного перед выбором: «Если нравятся смертные, иди и сам стань среди них. Докажи свою верность, и приму тебя своим мужем бессмертным. Если же нет — иди и умри средь созданий своих». Согласился с ней бог: неоспоримы были её слова (да и магия тоже). С тех пор он вёл себя примерно, проявляя к бессмертию чуть больше любви, чем к смертным. Но чтобы умолить вечную свою супругу, он должен стремиться к победам на поле боя.</string>
    <string name="opisanie1.2">Некогда Великий магистр демонологии заслужил известность среди своих собратьев, сражаясь на стороне света и справедливости. Но лесть испортила его. Силы мага превосходило лишь его же честолюбие, и демон завлёк его на тёмную сторону, выменяв душу магистра на уважение других. Запятнав душу ужасными преступлениями, маг остался в одиночестве: демон предал его и стал искать выгоды у врагов.</string>
    <string name="opisanie1.3">Рождённая в тихих местах и взращённая вместе со своей огненно-рыжей сестрой, ещё в молодости Рилай поняла, что её внутреннее единство со стихией льда вредит всем вокруг. Источники и горные реки замерзали, стоило ей прикорнуть неподалеку; зреющие плоды сковывал кусачий мороз, а цветущие висячие сады осыпались на землю безжизненной ледяной мозаикой. Когда отчаявшиеся родители решили отселить пламенную Лину на экватор, они изгнали и Рилай, чьим новым домом стали холодные земли Айсрека. Там, в пещере на вершине ледника Голубого сердца, её и стал наставлять маг льда. </string>
    <string name="opisanie1.4">Райдзин Громокег — сила природы в самом буквальном смысле: это буйная энергия ветра и непогоды, заключённая в человеческом обличье. Как же он неистов, неудержим и задорен! Весёлый, словно любимый дядюшка, Райдзин заряжает всё вокруг своей искрящейся энергией. Но не всегда всё было именно так: начало его жизни положила трагедия. Много поколений назад, на плато за Скулящими горами, добрые люди страдали от голода и засухи. Обычный маг стихий Громокег запретным заклинанием призвал духа бури, умоляя его о дожде. Разгневанный дерзостью смертного, небесный Райдзин обрушил на землю потопы и ураганы.</string>
    <string name="opisanie1.5">Даже другие духи не понимают стремлений и замыслов их старшего брата Иная, духа пустоты. Он хранит секреты, которые могут расколоть сознание смертного, и наблюдает за мановениями вселенной с непостижимой прозорливостью, оставляя подготовленным слугам исполнять его волю; и только если он решит, что больше никто не сможет направить реальность на верный путь, он покинет сокрытый храм и переместится в материальный мир.</string>
    <string name="opisanie1.6">Вдали ковыляет тонкий силуэт — конечности его свисают, а походка виляет: это колдун неустанно ищет на поле боя слабину, где его умения принесут больше всего пользы и вреда. Неясно, уродилось ли это существо таким или его что-то обезобразило, но никто не усомнится в силах, что держит в себе такой неопрятный каркас. Громко стуча посохом оземь, Жарвакко вышагивает по полю боя, пользуясь внушительным арсеналом амулетов, проклятий, заговоров и заклинаний.</string>
    <string name="opisanie1.7">За всю историю Устричной бухты никого не ненавидели так, как подрывников Techies. Но — вот незадача — Устричной бухты больше нет. Как и города Тотерина. И даже Охотограда. Вообще, если бы кто-нибудь следил за похождениями подрывников, он бы заметил, что там, где появляются Techies, исчезают города. Как и все остальные неизбежные бедствия, происходившие вокруг них, отправной точкой для уничтожения Устричной бухты стало изобретение. Гении пиротехники — Скви, Сплин и Спун — искали безопасный метод пробить шахты под городом взрывчаткой и создали самое диковинное свое устройство — кнопку, позволяющую зажечь фитиль издалека. Троица, решившая во что бы то ни стало испытать свое изобретение, заставила всю свою крохотную мастерскую радиоуправляемыми бочками с огненной солью. Набив тележку этими бомбами, они закопали их в пустынном поле. Спрятавшись в траншее, Сплин вдавил кнопку детонатора. Но ничего не произошло.</string>
</resources>